Add filter by if bird entry has associated images
